<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Weather</string>
    <string name="menu_my_places">My locations</string>
    <string name="menu_settings">Settings</string>
    <string name="search">Search</string>
    <string name="current_weather">Current weather</string>
    <string name="feels_like">Feeling temperature</string>
    <string name="temperature_value_celsius">%1$d°C</string>
    <string name="temperature_value_fahrenheit">%1$d°F</string>
    <string name="min_max_temperature_value_celsius">%1$d°C\n%2$d°C</string>
    <string name="min_max_temperature_value_fahrenheit">%1$d°F\n%2$d°F</string>
    <string name="sunrise">☀⬆ %1$s</string>
    <string name="sunset">☀⬇ %1$s</string>
    <string name="wind_kilometers">💨 %1$d km/h</string>
    <string name="wind_miles">💨 %1$d mi/h</string>
    <string name="humidity">💧 %1$s %%</string>
    <string name="max_temperature">Max temperature</string>
    <string name="min_temperature">Min temperature</string>
    <string name="confirm">Confirm</string>
    <string name="city">Location</string>
    <string name="country">Country</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="unknown_location">Unknown location!</string>
    <string name="successfully_save">Location was successfully saved</string>
    <string name="my_location">My location </string>
    <string name="add_location">Add location</string>
    <string name="exit">Quit app</string>
    <string name="retry">Try again</string>
    <string name="error">Error</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="speed_unit">Speed unit</string>
    <string name="kilometers_per_hour">Kilometer per hour</string>
    <string name="miles_per_hour">Miles per hour</string>
    <string name="map_type">Map type</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="turn_on">On</string>
    <string name="turn_off">Off</string>
    <string name="permanent_notification">Permanent weather notification</string>
    <string name="last_update">Last updated %1$s</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="backup_failed">Backup save failed</string>
    <string name="no_backup_for_this_id">No offline backup for this location \nConnect to internet for continue</string>
    <string name="language">Language</string>
    <string name="language_for_url">en</string>
    <string name="select_language">Select language</string>
    <string name="english">English</string>
    <string name="german">Deutsch</string>
    <string name="czech">Čeština</string>
    <string name="slovak">Slovenčina</string>
    <string name="weather_icon_description">weather icon</string>
    <string name="refresh_button_description">refresh button</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>



    <string name="shared_pref_id">Favourite ID</string>
    <string name="shared_pref_latitude">Last latitude</string>
    <string name="shared_pref_longitude">Last longitude</string>
    <string name="shared_pref_city">Last city</string>
    <string name="shared_pref_country">Last country</string>
    <string name="shared_pref_temperature_unit">Temperature unit</string>
    <string name="shared_pref_speed_unit">Speed unit</string>
    <string name="shared_pref_map_type">Map type</string>
    <string name="shared_pref_backup_location_id">Backup Location ID</string>
    <string name="shared_pref_language">Language</string>


    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>



</resources>