<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/extended_notification_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:theme="@style/WeatherTheme.WhiteColorText"
    tools:background="@drawable/clear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/txt_temperature_extended_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="?weatherTextColor"
            android:textSize="45sp"
            tools:text="10°C" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_weight="90"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_city_extended_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?weatherTextColor"
                android:textSize="25sp"
                tools:text="Bratislava" />

            <TextView
                android:id="@+id/txt_weather_description_extended_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?weatherTextColor"
                android:textSize="15sp"
                tools:text="Sunny" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="25"
            android:background="@drawable/white_border"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_current_weather__extended_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_icon_description"
                tools:src="@drawable/example" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="25"
            android:background="@drawable/white_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textColor="?weatherTextColor"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txt_today_temperature_extended_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="?weatherTextColor"
                android:textStyle="bold"
                tools:text="18°C \n26°C" />

            <ImageView
                android:id="@+id/img_today_weather_extended_layout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/weather_icon_description"
                tools:src="@drawable/example" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="25"
            android:background="@drawable/white_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow"
                android:textColor="?weatherTextColor"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txt_tomorrow_temperature_extended_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="?weatherTextColor"
                android:textStyle="bold"
                tools:text="20°C\n29°C" />

            <ImageView
                android:id="@+id/img_tomorrow_weather_extended_layout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/weather_icon_description"
                tools:src="@drawable/example" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="25"
            android:background="@drawable/white_border"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_day_after_tomorrow_today_extended_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?weatherTextColor"
                android:textStyle="bold|italic"
                tools:text="Sunday" />

            <TextView
                android:id="@+id/txt_day_after_tomorrow_temperature_extended_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="?weatherTextColor"
                android:textStyle="bold"
                tools:text="19°C\n31°C" />

            <ImageView
                android:id="@+id/img_day_after_tomorrow_weather_extended_layout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/weather_icon_description"
                tools:src="@drawable/example" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp">

        <ImageButton
            android:id="@+id/btn_refresh_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/refresh_button_description"
            android:src="@drawable/ic_baseline_refresh_24" />

        <TextView
            android:id="@+id/txt_refresh_time_extended_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="?weatherTextColor"
            android:textStyle="bold"
            tools:text="Last updated 16:54" />

    </LinearLayout>
</LinearLayout>